// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Aircraft model form component render correct in readOnly mode 1`] = `
<Form
  anchor="right"
  cancelButton=""
  editMode={false}
  enableReadOnly={false}
  formId="modelsForm"
  handleCancel={[MockFunction]}
  handleOk={[MockFunction]}
  handleSubmit={[Function]}
  inlineError={null}
  isDisabled={false}
  isOpen={true}
  okButton=""
  onChange={[Function]}
  openItemId="102"
  openItemName="My open item test"
>
  <FormHeader>
    <span />
    <span />
  </FormHeader>
  <FormBody>
    <ScrollBar
      className=""
      component="div"
      containerRef={[Function]}
      option={
        Object {
          "swipeEasing": true,
          "wheelSpeed": 0.4,
        }
      }
    >
      <div>
        <h2 />
        <WithStyles(ForwardRef(Grid))
          container={true}
          spacing={3}
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            sm={12}
            xs={12}
          >
            <AircraftModelForm__FormControl
              error={false}
            >
              <AircraftModelForm__Input
                className=""
                color="secondary"
                disabled={true}
                error={false}
                id="modelCode"
                inputProps={
                  Object {
                    "maxLength": 10,
                    "name": "modelCode",
                  }
                }
                label=""
                onChange={[Function]}
                placeholder=""
                required={true}
                value=""
              />
              <ErrorMessage
                error={true}
                isVisible={false}
                message=""
              />
            </AircraftModelForm__FormControl>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <AircraftModelForm__FormControl
              error={false}
            >
              <AircraftModelForm__Input
                className=""
                color="secondary"
                disabled={true}
                error={false}
                id="modelName"
                inputProps={
                  Object {
                    "maxLength": 50,
                    "name": "modelName",
                  }
                }
                label=""
                onChange={[Function]}
                value=""
              />
              <ErrorMessage
                error={true}
                isVisible={false}
                message=""
              />
            </AircraftModelForm__FormControl>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </div>
    </ScrollBar>
  </FormBody>
</Form>
`;

exports[`AircraftModelForm Component renders correctly 1`] = `
<Form
  anchor="right"
  cancelButton=""
  editMode={false}
  enableReadOnly={false}
  formId="modelsForm"
  handleCancel={[MockFunction]}
  handleOk={[MockFunction]}
  handleSubmit={[Function]}
  inlineError={null}
  isDisabled={true}
  isOpen={true}
  okButton=""
  onChange={[Function]}
  openItemId="102"
  openItemName="My open item test"
>
  <FormHeader>
    <span />
    <span />
  </FormHeader>
  <FormBody>
    <ScrollBar
      className=""
      component="div"
      containerRef={[Function]}
      option={
        Object {
          "swipeEasing": true,
          "wheelSpeed": 0.4,
        }
      }
    >
      <div>
        <h2 />
        <WithStyles(ForwardRef(Grid))
          container={true}
          spacing={3}
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            sm={12}
            xs={12}
          >
            <AircraftModelForm__FormControl
              error={false}
            >
              <AircraftModelForm__Input
                className=""
                color="secondary"
                error={false}
                id="modelCode"
                inputProps={
                  Object {
                    "maxLength": 10,
                    "name": "modelCode",
                  }
                }
                label=""
                onChange={[Function]}
                placeholder=""
                required={true}
                value=""
              />
              <ErrorMessage
                error={true}
                isVisible={false}
                message=""
              />
            </AircraftModelForm__FormControl>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <AircraftModelForm__FormControl
              error={false}
            >
              <AircraftModelForm__Input
                className=""
                color="secondary"
                error={false}
                id="modelName"
                inputProps={
                  Object {
                    "maxLength": 50,
                    "name": "modelName",
                  }
                }
                label=""
                onChange={[Function]}
                value=""
              />
              <ErrorMessage
                error={true}
                isVisible={false}
                message=""
              />
            </AircraftModelForm__FormControl>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </div>
    </ScrollBar>
  </FormBody>
</Form>
`;
